    archives created from the same Git tree are always identical.
    (#577, Jonas Haag)
0.18.6	2017-11-11

 BUG FIXES

  * Fix handling of empty repositories in ``porcelain.clone``.
   (#570, Jelmer Vernooĳ)

  * Raise an error when attempting to add paths that are not under the
    repository. (Jelmer Vernooĳ)

  * Fix error message for missing trailing ]. (Daniel Andersson)

  IMPROVEMENTS

  * Enforce date field parsing consistency. This also add checks on
    those date fields for potential overflow.
    (Antoine R. Dumont, #567)

0.18.5	2017-10-29

 BUG FIXES

  * Fix cwd for hooks. (Fabian Grünbichler)

  * Fix setting of origin in config when non-standard origin is passed into
    ``Repo.clone``. (Kenneth Lareau, #565)

  * Prevent setting SSH arguments from SSH URLs when using SSH through a
    subprocess. Note that Dulwich doesn't support cloning submodules.
    (CVE-2017-16228) (Jelmer Vernooĳ)

 IMPROVEMENTS

  * Silently ignored directories in ``Repo.stage``.
    (Jelmer Vernooĳ, #564)

 API CHANGES

  * GitFile now raises ``FileLocked`` when encountering a lock
    rather than OSError(EEXIST). (Jelmer Vernooĳ)

0.18.4	2017-10-01

 BUG FIXES

  * Make default User-Agent start with "git/" because GitHub won't response to
    HTTP smart server requests otherwise (and reply with a 404).
    (Jelmer vernooĳ, #562)

0.18.3	2017-09-03

 BUG FIXES

  * Read config during porcelain operations that involve remotes.
    (Jelmer Vernooĳ, #545)

  * Fix headers of empty chunks in unified diffs. (Taras Postument, #543)

  * Properly follow redirects over HTTP. (Jelmer Vernooĳ, #117)

 IMPROVEMENTS

  * Add ``dulwich.porcelain.update_head``. (Jelmer Vernooĳ, #439)

  * ``GitClient.fetch_pack`` now returns symrefs.
    (Jelmer Vernooĳ, #485)

  * The server now supports providing symrefs.
    (Jelmer Vernooĳ, #485)

  * Add ``dulwich.object_store.commit_tree_changes`` to incrementally
    commit changes to a tree structure. (Jelmer Vernooĳ)
